# openvino

./: .gitmodules  CMakeLists.txt
cmake/: conformance.cmake  features.cmake
src/bindings/python/: constraints.txt
src/bindings/python/src/pyopenvino/graph/: util.cpp
src/common/low_precision_transformations/src/: low_precision.cpp  reduce_sum.cpp
src/core/include/ngraph/opsets/: opset.hpp
src/core/include/openvino/core/: model.hpp
src/core/src/: model.cpp
src/core/src/opsets/: opset.cpp
src/core/src/pass/: graph_rewrite.cpp  serialize.cpp
src/frontends/onnx/frontend/src/: frontend.cpp
src/frontends/onnx/frontend/src/core/: tensor.cpp  tensor.hpp
src/frontends/onnx/frontend/src/utils/: common.cpp
src/frontends/onnx/onnx_common/src/: utils.cpp
src/tests/: CMakeLists.txt
src/tests/functional/plugin/conformance/subgraphs_dumper/include/: ops_cache.hpp
src/tests/functional/plugin/conformance/subgraphs_dumper/src/: main.cpp  ops_cache.cpp
src/tests/functional/plugin/conformance/test_runner/api_conformance_runner/src/: core_config.cpp
src/tests/functional/plugin/conformance/test_runner/conformance_infra/: CMakeLists.txt
src/tests/functional/plugin/conformance/test_runner/conformance_infra/include/: conformance.hpp
src/tests/functional/plugin/conformance/test_runner/conformance_infra/include/read_ir_test/: read_ir.hpp
src/tests/functional/plugin/conformance/test_runner/conformance_infra/src/read_ir_test/: read_ir.cpp
src/tests/functional/plugin/conformance/test_runner/op_conformance_runner/: CMakeLists.txt
src/tests/functional/plugin/conformance/test_runner/op_conformance_runner/src/read_ir/: read_ir_compare_with_refs.cpp
src/tests/functional/shared_test_classes/include/shared_test_classes/base/: layer_test_utils.hpp
src/tests/functional/shared_test_classes/include/shared_test_classes/read_ir/: read_ir.hpp
src/tests/functional/shared_test_classes/src/base/: layer_test_utils.cpp
src/tests/functional/shared_test_classes/src/read_ir/: read_ir.cpp
src/tests/ie_test_utils/common_test_utils/: CMakeLists.txt  data_utils.hpp  file_utils.hpp  postgres_link.cpp  postgres_link.hpp  test_common.cpp  test_common.hpp
src/tests/pg_test/: CMakeLists.txt
src/tests/pg_test/src/: main.cpp
tools/: constraints.txt
tools/postgres/: CMakeLists.txt
